[tool.poetry]
name = "lang"
version = "0.1.0"
description = ""
authors = ["Robin Schroer <sulami@peerwire.org>"]

[tool.poetry.dependencies]
python = "^3.7"
llvmlite = "^0.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
lang = "lang:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
